# gamatrix

./: README.md  pyproject.toml
.github/workflows/: ci.yml  pr.yml
docker/: Dockerfile
gamatrix/: __main__.py
gamatrix/commands/: _compare.py  _exit.py  _help.py
