[tool.poetry]
name = "gamatrix"
version = "0.10.0"
description = "An app to help you and your Steam friends determine what game to play."
authors = ["Derek Keeler <d3r3kk@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
docopt = "^0.6.2"
type-docopt = "^0.8.2"
steam = {extras = ["client"], version = "^1.0.2"}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.790"
pytest = "^6.1.1"
pytest-cov = "^2.10.1"
rope = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = ["gamatrix/"]
branch = true

[tool.coverage.report]
fail_under = 43
